@startuml
title Diagramme de classes - Sprint 3
left to right direction
hide circle
skinparam shadowing false
skinparam classAttributeIconSize 0

class Athlete {
  +id: number
  +userId: number
  +sport?: string
  +goals?: string
  +experienceLevel?: string
  +fitnessLevel?: string
  +joinedDate: Date
  +completeProfile()
  +updateMetrics()
  +consultDashboard()
}

class CoachProfile {
  +id: uuid
  +userId: number
  +bio?: string
  +experience_years: number
  +rating: number
  +monthlyPrice: decimal
  +verified: boolean
  +updateProfile()
  +publishProgram()
  +manageAthletes()
}

class Exercise {
  +id: uuid
  +name: string
  +target_muscle?: string
  +difficulty_level: string
  +gif_url?: string
  +is_custom: boolean
  +search()
  +getByBodyPart()
  +getGif()
}

class Program {
  +id: number
  +name: string
  +athleteId?: number
  +coachId: number
  +status: string
  +is_template: boolean
  +startDate: Date
  +create()
  +assign()
  +accept()
  +quit()
}

class ProgramDay {
  +id: number
  +programId: number
  +day_number: number
  +title?: string
  +addExercise()
}

class ProgramExercise {
  +id: number
  +programDayId: number
  +exercise_id: string
  +sets: number
  +reps: number
  +rpe?: number
  +order: number
}

class WorkoutLog {
  +id: number
  +athleteId: number
  +programId?: number
  +sessionId?: number
  +scheduledDate: Date
  +completedAt?: Date
  +status: string
  +start()
  +complete()
  +quit()
  +emitEvent()
}

class ExerciseLog {
  +id: number
  +workoutLogId: number
  +exercise_name: string
  +setsCompleted: number
  +repsPerSet?: number[]
  +weightKgPerSet?: number[]
}

class ActivityEvent {
  +id: number
  +athleteId: number
  +type: string
  +payload?: json
  +created_at: Date
  +record()
}

CoachProfile "1" --> "0..*" Program : crée
Athlete "1" --> "0..*" Program : reçoit
Program "1" --> "1..*" ProgramDay : compose
ProgramDay "1" --> "1..*" ProgramExercise : contient
ProgramExercise "0..*" --> "1" Exercise : référence
Athlete "1" --> "0..*" WorkoutLog : réalise
WorkoutLog "1" --> "0..*" ExerciseLog : détaille
Athlete "1" --> "0..*" ActivityEvent : génère
@enduml
